--- a/detalje.html
+++ b/detalje.html
@@ -6,6 +6,8 @@
      <meta name="robots" content="noindex">
     <title>Detalje</title>
     <link rel="stylesheet" href="website_v1.css">
+        <link rel="stylesheet" href="detalje.css">
+
 </head>
 
 <body>
@@ -13,7 +15,7 @@
    <main>
        <article class="bestemt_kunstner">
                <img src="" alt="" class="billede">
-               <h2 class="navn"></h2>
+               <h2 class="navn">ARTIST INDLÆSES...</h2>
                <h3 class="type"></h3>
                <p class="face"></p>
                <p class="genre"></p>
