--- a/detalje.html
+++ b/detalje.html
@@ -14,7 +14,10 @@
 
    <main>
        <article class="bestemt_kunstner">
-               <img src="" alt="" class="billede">
+<!--               <img src="" alt="" class="billede">-->
+
+
+              <img src="placeholder.jpg">
                <h2 class="navn">ARTIST INDLÆSES...</h2>
                <h3 class="type"></h3>
                <p class="face"></p>
@@ -24,6 +27,7 @@
                <p class="beskrivelse-lang"></p>
                <p class="spotify"></p>
                <p class="_id"></p>
+
 
                <button>TILBAGE</button>
 
