--- a/website_v1.html
+++ b/website_v1.html
@@ -27,7 +27,8 @@
 
        <template>
            <article class="bestemt_kunstner">
-               <img src="" alt="" class="billede">
+<!--               <img src="" alt="" class="billede">-->
+              <img src="placeholder.jpg" alt="">
                <h2 class="navn"></h2>
                <h3 class="type"></h3>
                <p class="face"></p>
