--- a/detalje.html
+++ b/detalje.html
@@ -7,10 +7,16 @@
     <title>Detalje</title>
     <link rel="stylesheet" href="website_v1.css">
         <link rel="stylesheet" href="detalje.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Space+Mono:wght@700&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
+
+   <div class="id">
+   <img src="logo_sorthvid.svg" alt="">
+   </div>
 
    <main>
        <article class="bestemt_kunstner">
