--- a/website_v1.html
+++ b/website_v1.html
@@ -6,6 +6,8 @@
     <meta name="robots" content="noindex">
     <title>Dansk musik katalog</title>
     <link rel="stylesheet" href="website_v1.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Space+Mono:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +16,7 @@
    </div>
 
    <header>
-       <h1>Dansk musik katalog</h1>
+       <h1>DANSK MUSIK KATALOG</h1>
           <nav>
             <button data-genre="alle" class="valgt">ALLE</button>
             <button data-genre="Rock">ROCK</button>
