--- a/detalje.html
+++ b/detalje.html
@@ -14,9 +14,10 @@
 
 <body>
 
-   <div class="id">
-   <img src="logo_sorthvid.svg" alt="">
-   </div>
+   <div class="logo">
+        <a href="website_v1.html"> <img src="logo_sorthvid.svg" alt="">
+        </a>
+    </div>
 
    <main>
        <article class="bestemt_kunstner">
