--- a/website_v1.html
+++ b/website_v1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="da">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +8,18 @@
     <title>Dansk musik katalog</title>
     <link rel="stylesheet" href="website_v1.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Space+Mono:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Space+Mono:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-   <div class="logo">
-   <img src="logo_sorthvid.svg" alt="">
-   </div>
+    <div class="logo">
+        <a href="website_v1.html"> <img src="logo_sorthvid.svg" alt="">
+        </a>
+    </div>
 
-   <header>
-       <h1>DANSK MUSIK KATALOG</h1>
-          <nav>
+    <header>
+        <h1>DANSK MUSIK KATALOG</h1>
+        <nav>
             <button data-genre="alle" class="valgt">ALLE</button>
             <button data-genre="Rock">ROCK</button>
             <button data-genre="Pop">POP</button>
@@ -25,29 +27,30 @@
             <button data-genre="Rap">RAP</button>
             <button data-genre="Heavy Metal">HEAVY METAL</button>
         </nav>
-       <main></main>
+        <main></main>
 
-       <template>
-           <article class="bestemt_kunstner">
-<!--               <img src="" alt="" class="billede">-->
-              <img src="placeholder.jpg" alt="">
-               <h2 class="navn"></h2>
-               <h3 class="type"></h3>
-               <p class="face"></p>
-               <p class="genre"></p>
-               <p class="aktiv"></p>
-               <p class="beskrivelse-kort"></p>
-               <p class="beskrivelse-lang"></p>
-               <p class="spotify"></p>
-               <p class="_id"></p>
-           </article>
+        <template>
+            <article class="bestemt_kunstner">
+                <!--               <img src="" alt="" class="billede">-->
+                <img src="placeholder.jpg" alt="">
+                <h2 class="navn"></h2>
+                <h3 class="type"></h3>
+                <p class="face"></p>
+                <p class="genre"></p>
+                <p class="aktiv"></p>
+                <p class="beskrivelse-kort"></p>
+                <p class="beskrivelse-lang"></p>
+                <p class="spotify"></p>
+                <p class="_id"></p>
+            </article>
 
-       </template>
+        </template>
 
-   </header>
+    </header>
 
 
 
     <script src="website_v1.js"></script>
 </body>
+
 </html>
