--- a/website_v1.html
+++ b/website_v1.html
@@ -8,48 +8,60 @@
     <title>Dansk musik katalog</title>
     <link rel="stylesheet" href="website_v1.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Space+Mono:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="logo">
-        <a href="website_v1.html"> <img src="logo_sorthvid.svg" alt="">
-        </a>
-    </div>
+    <nav id="nav_menu">
+        <p class="nav_nav">Musik</p>
+        <p class="nav_nav">Om os</p>
+        <p class="nav_nav">Kontakt</p>
+        <!--
+        <div class="logo">
+            <img src="logo_sorthvid.svg" alt="">
+        </div>
+-->
+    </nav>
 
     <header>
-        <h1>DANSK MUSIK KATALOG</h1>
-        <nav>
-            <button data-genre="alle" class="valgt">ALLE</button>
-            <button data-genre="Rock">ROCK</button>
-            <button data-genre="Pop">POP</button>
-            <button data-genre="HipHop">HIPHOP</button>
-            <button data-genre="Rap">RAP</button>
-            <button data-genre="Heavy Metal">HEAVY METAL</button>
-        </nav>
-        <main></main>
-
-        <template>
-            <article class="bestemt_kunstner">
-                <!--               <img src="" alt="" class="billede">-->
-                <img src="placeholder.jpg" alt="">
-                <h2 class="navn"></h2>
-                <h3 class="type"></h3>
-                <p class="face"></p>
-                <p class="genre"></p>
-                <p class="aktiv"></p>
-                <p class="beskrivelse-kort"></p>
-                <p class="beskrivelse-lang"></p>
-                <p class="spotify"></p>
-                <p class="_id"></p>
-            </article>
-
-        </template>
-
+        <h1>Dansk Musik Katalog</h1>
+        <img src="billeder/billede_01.jpg" alt="Billede af høretelefoner" class="header_billede">
     </header>
+    <h2>Velkommen til en verden fuld af fantastisk dansk musik.</h2>
+    <h3>Vælg en genre</h3>
+    <nav id="nav_knapper">
+        <button data-genre="alle" class="valgt">ALLE</button>
+        <button data-genre="Rock">ROCK</button>
+        <button data-genre="Pop">POP</button>
+        <button data-genre="HipHop">HIPHOP</button>
+        <button data-genre="Rap">RAP</button>
+        <button data-genre="Heavy Metal">HEAVY METAL</button>
+    </nav>
+    <main>
+        <div id="genre_tag_div">
+            <p class="genre_tag">Alle</p>
+        </div>
+    </main>
+    <footer></footer>
 
+    <template>
+        <article class="bestemt_kunstner">
+            <img src="" alt="" class="billede">
+            <h4 class="navn"></h4>
+            <h5 class="type"></h5>
+            <p class="face"></p>
+            <p class="genre"></p>
+            <p class="aktiv"></p>
+            <p class="beskrivelse-kort"></p>
+            <p class="beskrivelse-lang"></p>
+            <p class="spotify"></p>
+            <p class="_id"></p>
+            <p class="se-mere">Se mere ></p>
+        </article>
 
-
+    </template>
     <script src="website_v1.js"></script>
 </body>
 
