--- a/website_v1.html
+++ b/website_v1.html
@@ -15,6 +15,8 @@
 
 <body>
     <nav id="nav_menu">
+        <a href="website_v1.html"> <img src="logo_sorthvid.svg" alt="">
+        </a>
         <p class="nav_nav">Musik</p>
         <p class="nav_nav">Om os</p>
         <p class="nav_nav">Kontakt</p>
@@ -26,8 +28,7 @@
     </nav>
 
     <header>
-        <h1>Dansk Musik Katalog</h1>
-        <img src="billeder/billede_01.jpg" alt="Billede af høretelefoner" class="header_billede">
+        <h1>DANSK MUSIK KATALOG</h1>
     </header>
     <h2>Velkommen til en verden fuld af fantastisk dansk musik.</h2>
     <h3>Vælg en genre</h3>
@@ -48,7 +49,7 @@
 
     <template>
         <article class="bestemt_kunstner">
-            <img src="" alt="" class="billede">
+            <img src="placeholder.jpg" alt="" class="billede">
             <h4 class="navn"></h4>
             <h5 class="type"></h5>
             <p class="face"></p>
