--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             </a>
             <h1>DANSK MUSIK KATALOG</h1>
         </header>
-
+<br>
         <h2>Velkommen til en verden fuld af <span>fantastisk dansk musik</span>.</h2>
 
-        <h2>Vælg en genre</h2>
+<!--        <h2 class ="genre_tag">Vælg en genre</h2>-->
+       <br>
         <nav id="genre">
             <button data-genre="alle" class="valgt">Alle</button>
             <button data-genre="Rock">Rock</button>
@@ -38,9 +39,7 @@
             <button data-genre="Rap">Rap</button>
             <button data-genre="Heavy Metal">Metal</button>
         </nav>
-        <div id="genre_tag_div">
-            <h3 class="genre_tag">Alle</h3>
-        </div>
+
     </div>
 
     <section id="liste"></section>
