--- a/index.html
+++ b/index.html
@@ -23,24 +23,34 @@
 
         <header>
             <a href="index.html">
-            </a>
-            <h1>DANSK MUSIK KATALOG</h1>
-        </header>
-<br>
-        <h2>Velkommen til en verden fuld af <span>fantastisk dansk musik</span>.</h2>
 
-<!--        <h2 class ="genre_tag">Vælg en genre</h2>-->
-       <br>
-        <nav id="genre">
-            <button data-genre="alle" class="valgt">Alle</button>
-            <button data-genre="Rock">Rock</button>
-            <button data-genre="Pop">Pop</button>
-            <button data-genre="HipHop">HipHop</button>
-            <button data-genre="Rap">Rap</button>
-            <button data-genre="Heavy Metal">Metal</button>
-        </nav>
+            <h1>DANSK MUSIK KATALOG</h1>
+            </a>
+            <br>
+
+
+            <!--        <h2 class ="genre_tag">Vælg en genre</h2>-->
+
+
+        </header>
+        <br>
 
     </div>
+    <nav id="genre">
+        <h2>Velkommen til en verden fuld af <span>fantastisk dansk musik!</span></h2>
+        <br> <br>
+        <button data-genre="alle" class="valgt">Alle</button>
+        <button data-genre="Rock">Rock</button>
+        <button data-genre="Pop">Pop</button>
+        <button data-genre="HipHop">HipHop</button>
+        <button data-genre="Rap">Rap</button>
+        <button data-genre="Heavy Metal">Metal</button>
+    </nav>
+
+
+
+
+
 
     <section id="liste"></section>
 
@@ -56,4 +66,6 @@
     <footer></footer>
 
     <script src="index.js"></script>
-</body></html>
+</body>
+
+</html>
