--- a/detalje.html
+++ b/detalje.html
@@ -29,10 +29,8 @@
     <div id="main">
         <div class="single">
             <div id=colleft>
-                <img src="" alt="IMG" class="billede">
-                <div id="spot">
-                    <p>Mød dem på</p><a class="spotify">SPOTIFY</a>
-                </div>
+                <img src="IMG/loading.png" alt="IMG" class="billede">
+
             </div>
 
             <div id="colright">
@@ -46,23 +44,43 @@
             </div>
 
             <div id="topright">
+               <br>
                 <div id="rund">
                     <p class="genre"></p>
+
+
+                </div>
+                <br>
+                <div id="spot">
+                   <br>
+                    <p> <a class="spotify"> Spotify</a> </p>
                 </div>
             </div>
+
             <button id="back">TILBAGE</button>
         </div>
     </div>
 
     <footer>
         <div class="col1">
+           <br>
             <img src="IMG/logo.png" alt="logo">
         </div>
         <div class="col2">
+           <br>
             <h3>Om os</h3>
+            <br>
+            <p>Vi kategoriserer og arkiverer danske kunstere igennem tiden, for at hylde deres musik. Baseret i Nordvest.</p>
         </div>
+
         <div class="col3">
+           <br>
             <h3>Kontakt os</h3>
+            <br>
+            <p>Email: <a href="">danskmusikkatalog@dmk.dk</a></p>
+            <br>
+            <p>Telefon: +45 30 30 40 10</p>
+            <br>
         </div>
     </footer>
 
