--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav id="top">
         <img src="IMG/logo.png" alt="logo">
-        <p>Musik</p>
+        <p>DESIGNGUIDE</p>
         <p>Om os</p>
         <p>Kontakt</p>
     </nav>
@@ -40,11 +40,11 @@
 
     <section id="liste"></section>
 
-    <footer>HEJ</footer>
+    <footer><br></footer>
 
     <template>
         <article class="loop">
-            <img src="" alt="IMG" class="billede">
+            <img src="img" alt="IMG" class="billede">
             <h3 class="navn"></h3>
             <p class="beskrivelse-kort"></p>
             <p class="se-mere">Se mere</p>
@@ -57,10 +57,17 @@
         </div>
         <div class="col2">
             <h3>Om os</h3>
+            <br>
+            <p>Vi kategoriserer og arkiverer danske kunstere igennem tiden, for at hylde deres musik. Baseret i Nordvest.</p>
         </div>
 
         <div class="col3">
             <h3>Kontakt os</h3>
+            <br>
+            <p>Email: <a href="">danskmusikkatalog@dmk.dk</a></p>
+            <br>
+            <p>Telefon: +45 30 30 40 10</p>
+            <br>
         </div>
     </footer>
 
