fixet footer fuld responsiv

--- a/detalje.html
+++ b/detalje.html
@@ -15,6 +15,7 @@
 <body>
     <nav id="top">
         <img src="IMG/logo.png" alt="logo">
+
         <p>DesignGuide</p>
         <p>Om os</p>
         <p>Kontakt</p>
@@ -30,6 +31,7 @@
         <div class="single">
             <div id=colleft>
                 <img src="IMG/loading.png" alt="IMG" class="billede">
+
 
             </div>
 
@@ -61,16 +63,24 @@
         </div>
     </div>
 
-    <footer>
+      <footer>
+
         <div class="col1">
            <br>
             <img src="IMG/logo.png" alt="logo">
+
+
         </div>
         <div class="col2">
            <br>
             <h3>Om os</h3>
             <br>
             <p>Vi kategoriserer og arkiverer danske kunstere igennem tiden, for at hylde deres musik. Baseret i Nordvest.</p>
+            <br>
+             <p>Copyright DMK 2021 ©</p>
+             <br>
+
+
         </div>
 
         <div class="col3">
@@ -82,6 +92,9 @@
             <p>Telefon: +45 30 30 40 10</p>
             <br>
         </div>
+
+        <div></div>
+
     </footer>
 
     <script>
