--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 
     <section id="liste"></section>
 
-    <footer><br></footer>
 
     <template>
         <article class="loop">
@@ -52,16 +51,27 @@
     </template>
 
     <footer>
+
         <div class="col1">
+           <br>
             <img src="IMG/logo.png" alt="logo">
+
+
         </div>
         <div class="col2">
+           <br>
             <h3>Om os</h3>
             <br>
             <p>Vi kategoriserer og arkiverer danske kunstere igennem tiden, for at hylde deres musik. Baseret i Nordvest.</p>
+            <br>
+             <p>Copyright DMK 2021 ©</p>
+             <br>
+
+
         </div>
 
         <div class="col3">
+           <br>
             <h3>Kontakt os</h3>
             <br>
             <p>Email: <a href="">danskmusikkatalog@dmk.dk</a></p>
@@ -69,6 +79,9 @@
             <p>Telefon: +45 30 30 40 10</p>
             <br>
         </div>
+
+        <div></div>
+
     </footer>
 
     <script src="index.js"></script>
