--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Roboto&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
 </head>
 
 <body>
@@ -53,25 +60,25 @@
     <footer>
 
         <div class="col1">
-           <br>
+            <br>
             <img src="IMG/logo.png" alt="logo">
 
 
         </div>
         <div class="col2">
-           <br>
+            <br>
             <h3>Om os</h3>
             <br>
             <p>Vi kategoriserer og arkiverer danske kunstere igennem tiden, for at hylde deres musik. Baseret i Nordvest.</p>
             <br>
-             <p>Copyright DMK 2021 ©</p>
-             <br>
+            <p>Copyright DMK 2021 ©</p>
+            <br>
 
 
         </div>
 
         <div class="col3">
-           <br>
+            <br>
             <h3>Kontakt os</h3>
             <br>
             <p>Email: <a href="">danskmusikkatalog@dmk.dk</a></p>
