Fixed Favicon, fixed top navn links, added up in footer, sync html in detail and index

--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
 <body>
     <nav id="top">
         <img src="IMG/logo.png" alt="logo">
-        <p>DESIGNGUIDE</p>
-        <p>Om os</p>
-        <p>Kontakt</p>
+        <a href="designguide.html">
+            <p>Designguide</p>
+        </a>
+        <a href="#footer">
+            <p>Kontakt</p>
+        </a>
+        <a href="#footer">
+            <p>Om os</p>
+        </a>
     </nav>
 
     <header>
@@ -47,7 +53,6 @@
 
     <section id="liste"></section>
 
-
     <template>
         <article class="loop">
             <img src="img" alt="IMG" class="billede">
@@ -57,12 +62,13 @@
         </article>
     </template>
 
-    <footer>
-
+    <footer id="footer">
         <div class="col1">
             <br>
+            <a href="#top">
+                <img src="IMG/upp.png" alt="up" class="up">
+            </a>
             <img src="IMG/logo.png" alt="logo">
-
 
         </div>
         <div class="col2">
@@ -72,9 +78,8 @@
             <p>Vi kategoriserer og arkiverer danske kunstere igennem tiden, for at hylde deres musik. Baseret i Nordvest.</p>
             <br>
             <p>Copyright DMK 2021 ©</p>
+            <p>Album art Copyright Spotify 2021 ©</p>
             <br>
-
-
         </div>
 
         <div class="col3">
@@ -90,8 +95,5 @@
         <div></div>
 
     </footer>
-
     <script src="index.js"></script>
-</body>
-
-</html>
+</body></html>
