--- a/detalje.html
+++ b/detalje.html
@@ -10,9 +10,10 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Roboto&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
@@ -21,10 +22,15 @@
 <body>
     <nav id="top">
         <img src="IMG/logo.png" alt="logo">
-
-        <p>DesignGuide</p>
-        <p>Om os</p>
-        <p>Kontakt</p>
+        <a href="designguide.html">
+            <p>Designguide</p>
+        </a>
+        <a href="#footer">
+            <p>Kontakt</p>
+        </a>
+        <a href="#footer">
+            <p>Om os</p>
+        </a>
     </nav>
 
     <header>
@@ -40,7 +46,6 @@
 
 
             </div>
-
             <div id="colright">
                 <h2 class="navn">Kunstner INDLÆSES...</h2>
                 <h3 class="type"></h3>
@@ -56,7 +61,6 @@
                 <div id="rund">
                     <p class="genre"></p>
 
-
                 </div>
                 <br>
                 <div id="spot">
@@ -69,12 +73,14 @@
         </div>
     </div>
 
-    <footer>
+    <footer id="footer">
 
         <div class="col1">
             <br>
+            <a href="#top">
+                <img src="IMG/upp.png" alt="up" class="up">
+            </a>
             <img src="IMG/logo.png" alt="logo">
-
 
         </div>
         <div class="col2">
