--- a/detalje.html
+++ b/detalje.html
@@ -27,7 +27,7 @@
 
     <header>
         <a href="index.html">
-            <h1>DANSK MUSIK KATALOG</h1>
+            <h1>Dansk Musik Katalog</h1>
         </a>
     </header>
 
@@ -142,5 +142,8 @@
             console.log("tilbageTilForside");
             history.back();
         }
+
     </script>
-</body></html>
+</body>
+
+</html>
