--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
 
     <header>
         <a href="index.html">
-            <h1>DANSK MUSIK KATALOG</h1>
+            <h1>Dansk Musik Katalog</h1>
         </a>
     </header>
 
     <nav id="genre">
         <h2>Velkommen til en verden fuld af <span>fantastisk dansk musik!</span></h2>
         <br><br>
+        <p class="vaelg_en_genre">Vælg en genre</p>
         <button data-genre="alle" class="valgt">Alle</button>
         <button data-genre="Rock">Rock</button>
         <button data-genre="Pop">Pop</button>
@@ -87,4 +88,6 @@
 
     </footer>
     <script src="index.js"></script>
-</body></html>
+</body>
+
+</html>
