--- a/index.html
+++ b/index.html
@@ -2,27 +2,22 @@
 <html lang="da">
 
 <head>
-        <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
-    <title>Detalje</title>
+    <title>Dansk musik katalog</title>
     <link rel="stylesheet" href="index.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Roboto&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+
     <link rel="icon" href="IMG/favicon.ico">
 </head>
 
 <body>
     <nav id="top">
         <img src="IMG/logo.png" alt="logo">
-        <a href="designguide.html">
+        <a href="Design%20Guide.pdf">
             <p>Designguide</p>
         </a>
         <a href="#footer">
@@ -42,7 +37,7 @@
     <nav id="genre">
         <h2>Velkommen til en verden fuld af <span>fantastisk dansk musik!</span></h2>
         <br><br>
-        <p class="vaelg_en_genre">Vælg en genre</p>
+        <h3>Vælg en genre</h3>
         <button data-genre="alle" class="valgt">Alle</button>
         <button data-genre="Rock">Rock</button>
         <button data-genre="Pop">Pop</button>
@@ -58,7 +53,6 @@
             <img src="img" alt="IMG" class="billede">
             <h3 class="navn"></h3>
             <p class="beskrivelse-kort"></p>
-            <p class="se-mere">Se mere</p>
         </article>
     </template>
 
@@ -68,6 +62,7 @@
             <a href="#top">
                 <img src="IMG/upp.png" alt="up" class="up">
             </a>
+            <p>Up Top</p>
             <img src="IMG/logo.png" alt="logo">
 
         </div>
@@ -96,6 +91,4 @@
 
     </footer>
     <script src="index.js"></script>
-</body>
-
-</html>
+</body></html>
